netcfg (1.96) UNRELEASED; urgency=low

  [ Philipp Kern ]
  * Makefile: set DEB_HOST_ARCH{,_OS} conditionally
  * autoconfig.c: kill dhcp6c after timeout unless a lease is obtained
  * Fix the dns- entries in /etc/network/interfaces. (Closes: #689474)
    Patch by Matthew L. Dailey.

  [ Christian Perrier ]
  * [l10n] Drop use of sublevel 6 and move "recently" added
    strings to the sublevel they pertain to.

  [ Samuel Thibault ]
  * Fix ethtool-lite hurd-i386 build.

 -- Philipp Kern <pkern@debian.org>  Sat, 29 Sep 2012 17:03:57 +0200

netcfg (1.95) unstable; urgency=low

  [ Cyril Brulebois ]
  * Stop overriding CC if it's set.

  [ Updated translations ]
  * Catalan (ca.po) by Jordi Mallach
  * Danish (da.po) by Joe Hansen
  * Dutch (nl.po) by Jeroen Schot
  * Portuguese (Brazil) (pt_BR.po) by Felipe Augusto van de Wiel (faw)
  * Swedish (sv.po) by Martin Bagge / brother
  * Thai (th.po) by Theppitak Karoonboonyanan

 -- Christian Perrier <bubulle@debian.org>  Fri, 28 Sep 2012 07:19:38 +0200

netcfg (1.93) unstable; urgency=low

  [ Philipp Kern ]
  * Check the return code of the waitpid calls found in various cleanup
    routines. (Closes: #688470)
  * Align netcfg's generation of /etc/hosts with netbase's postinst,
    i.e. add localhost mapping to ::1 as well as 127.0.0.1.
    (Closes: #686970)

  [ Updated translations ]
  * Spanish (es.po) by Javier Fernández-Sanguino Peña
  * French (fr.po) by Christian Perrier
  * Indonesian (id.po) by Arief S Fitrianto
  * Korean (ko.po) by Changwoo Ryu
  * Macedonian (mk.po) by Arangel Angov
  * Malayalam (ml.po) by Anish A
  * Romanian (ro.po) by Andrei POPESCU
  * Vietnamese (vi.po) by Hai-Nam Nguyen
  * Simplified Chinese (zh_CN.po) by YunQiang Su
  * Traditional Chinese (zh_TW.po) by Ｖ字龍 | Vdragon

 -- Philipp Kern <pkern@debian.org>  Tue, 25 Sep 2012 00:12:50 +0200

netcfg (1.92) unstable; urgency=low

  [ Philipp Kern ]
  * netcfg-common.c: suppress unused warnings on hurd