@@ -20,8 +20,3 @@ ifneq (,$(shell dh_listpackages | grep '^netcfg$$'))
 	(echo ; po2debconf debian/netcfg-static.templates) \
 	   >> debian/netcfg/DEBIAN/templates
 endif
-
-# We don't want to run the test suite at build time; it's not designed for
-# that
-override_dh_auto_test:
-
